<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YearlySchoolGradeActivity">

    <EditText
        android:id="@+id/Q1P1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/q1p1"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/Q1P2"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/Q1P2"
        app:layout_constraintEnd_toStartOf="@+id/Q1P2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Q1P2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/q1p2"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/Q1P3"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/Q1P3"
        app:layout_constraintEnd_toStartOf="@+id/Q1P3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q1P1" />

    <EditText
        android:id="@+id/Q1P3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/q1p3"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/E1"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/E1"
        app:layout_constraintEnd_toStartOf="@+id/E1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q1P2" />

    <EditText
        android:id="@+id/E1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/ex1"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/Q2P1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q1P3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Q2P1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/q2p1"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/Q2P2"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/Q2P2"
        app:layout_constraintEnd_toStartOf="@+id/Q2P2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Q2P2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/q2p2"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/Q2P3"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/Q2P3"
        app:layout_constraintEnd_toStartOf="@+id/Q2P3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q2P1" />

    <EditText
        android:id="@+id/Q2P3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/q2p3"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/E2"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/E2"
        app:layout_constraintEnd_toStartOf="@+id/E2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q2P2" />

    <EditText
        android:id="@+id/E2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/ex2"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q2P3"
        app:layout_constraintTop_toBottomOf="@+id/E1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="button"
        android:text="@string/getAnnualGrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q2P1" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result">

        <TextView
            android:id="@+id/ShowErr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/ShowErr"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
            tools:layout_editor_absoluteX="148dp" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>